Update visual assets

--- a/app/src/main/res/color/chip_background_selector.xml
+++ b/app/src/main/res/color/chip_background_selector.xml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Chip Background Color Selector -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Selected State: Solid Red -->
-    <item android:color="#E50914" android:state_selected="true" />
-    <item android:color="#E50914" android:state_checked="true" />
-
-    <!-- Focused State: Transparent (Border handled by stroke selector) -->
-    <!-- Actually, for background color, we might want a slight tint or keep it transparent/dark
-         The border is handled by chipStrokeColor.
-         Let's keep background dark/transparent when just focused but not selected. -->
-    <item android:color="#1A1A1A" android:state_focused="true"/>
-
-    <!-- Default: Dark -->
-    <item android:color="#1A1A1A" />
+    <item android:color="@color/chip_background_selected" android:state_selected="true" />
+    <item android:color="@color/chip_background_selected" android:state_checked="true" />
+    <item android:color="@color/chip_background_focused" android:state_focused="true"/>
+    <item android:color="@color/chip_background_default" />
 </selector>
