--- a/app/src/main/res/color/chip_stroke_selector.xml
+++ b/app/src/main/res/color/chip_stroke_selector.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Chip Stroke Color Selector -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Focused: Red Border -->
-    <item android:color="#E50914" android:state_focused="true" />
-
-    <!-- Selected: Red Border (matches background) -->
-    <item android:color="#E50914" android:state_selected="true" />
-    <item android:color="#E50914" android:state_checked="true" />
-
-    <!-- Default: Transparent or Dark Grey -->
-    <item android:color="#33FFFFFF" />
+    <item android:color="@color/chip_stroke_selected" android:state_focused="true" />
+    <item android:color="@color/chip_stroke_selected" android:state_selected="true" />
+    <item android:color="@color/chip_stroke_selected" android:state_checked="true" />
+    <item android:color="@color/chip_stroke_default" />
 </selector>
